<resources>
    <string name="app_name">USTH Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mon">Thứ 2</string>
    <string name="partly_cloudy">Hơi Mây mù</string>
    <string name="_24c_31c">24C - 31C</string>
    <string name="tue">Thứ 3</string>
    <string name="showers">Mưa rào</string>
    <string name="_24c_30c">24C - 30C</string>
    <string name="wed">Thứ 4</string>
    <string name="rain">Mưa</string>
    <string name="_22c_23c">22C - 23C</string>
    <string name="thur">Thứ 5</string>
    <string name="scattered_showers">Mua rào rào</string>
    <string name="_22c_27c">22C - 27C</string>
    <string name="fri">Thứ 6</string>
    <string name="mostly_cloudy">Gần như là mây</string>
    <string name="_22c_30c">22C - 30C</string>
    <string name="sat">Thứ 7</string>
    <string name="sun">CNhật</string>
    <string name="thunder_storm">Bão</string>
    <string name="_25c_28c">25C - 28C</string>
    <string name="scattered_thunderstorms">Bão Rào Rào</string>
    <string name="_24c_27c">24C - 27C</string>
    <string name="_24c_26c">24C - 26C</string>
    <string name="_23c_27c">23C - 27C</string>
    <string name="usth_weather">USTH Weather</string>
    <string name="usthweather">USTH Weather</string>
    <string name="_12c_ncloudy">12C\nMây mù</string>
    <string name="paris">Paris</string>
    <string name="partly_cloudy_n24c_31c">Hơi Mây mù\n24C - 31C</string>
    <string name="showers_n24c_30c">Mưa rào\n24C - 30C</string>
    <string name="rain_n22c_23c">Mưa\n22C - 23C</string>
    <string name="scattered_showers_n22c_27c">Mua rào rào\n22C - 27C</string>
    <string name="mostly_cloudy_n22c_30c">Gần như là mây mù\n22C - 30C</string>
    <string name="thunderstorms_n25c_28c">Bão\n25C - 28C</string>
    <string name="scattered_thunderstorms_n24c_27c">Bão rào rào\n24C - 27C</string>
    <string name="showers_n24c_26c">Mưa rào\n24C - 26C</string>
    <string name="scattered_thunderstorms_n23c_27c">Bão rào rào\n23C - 27C</string>
    <string name="reload">Reload</string>
    <string name="more">More</string>
    <string name="enable_notifications">Enable Notifications</string>
</resources>