<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForestFragment">

    <!-- Container for the forecast area   -->
    <LinearLayout
        android:id="@+id/fragment_containter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="#e0f7fa" >

        <!-- Row for Monday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mon"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/partly_cloudy"
                android:contentDescription="@string/partly_cloudy"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp" />

            <!-- Vertical LinearLayout for weather description and temperature -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/partly_cloudy"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_24c_31c"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <!--Row for Tuesday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tue"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/rain"
                android:contentDescription="@string/showers"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp" />

            <!-- Vertical LinearLayout for weather description and temperature -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/showers"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_24c_30c"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <!--Row for Wednesday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wed"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/rain"
                android:contentDescription="Rain"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp" />

            <!-- Vertical LinearLayout for weather description and temperature -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rain"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_22c_23c"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <!--Row for Thursday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thur"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/scattered_shower"
                android:contentDescription="@string/showers"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp" />

            <!-- Vertical LinearLayout for weather description and temperature -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scattered_showers"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_22c_27c"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <!--Row for Friday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fri"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/partly_cloudy"
                android:contentDescription="@string/mostly_cloudy"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp" />

            <!-- Vertical LinearLayout for weather description and temperature -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mostly_cloudy"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_22c_30c"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <!--Row for Saturday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sat"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/partly_cloudy"
                android:contentDescription="@string/partly_cloudy"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp" />

            <!-- Vertical LinearLayout for weather description and temperature -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/partly_cloudy"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_24c_31c"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <!--Row for Sunday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sun"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/thunder_storm"
                android:contentDescription="@string/thunder_storm"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp" />

            <!-- Vertical LinearLayout for weather description and temperature -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thunder_storm"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_25c_28c"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <!--Row for Monday 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mon"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/thunder_storm"
                android:contentDescription="@string/scattered_thunderstorms"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp" />

            <!-- Vertical LinearLayout for weather description and temperature -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scattered_thunderstorms"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_24c_27c"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <!--Row for Tuesday 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tue"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/rain"
                android:contentDescription="@string/showers"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp" />

            <!-- Vertical LinearLayout for weather description and temperature -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/showers"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_24c_26c"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <!--Row for Wednesday 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wed"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/scattered_shower"
                android:contentDescription="@string/scattered_thunderstorms"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp" />

            <!-- Vertical LinearLayout for weather description and temperature -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scattered_thunderstorms"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_23c_27c"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>